--- a/csci201l_beacon_project/WebContent/homepage.css
+++ b/csci201l_beacon_project/WebContent/homepage.css
@@ -1,3 +1,4 @@
+/* Content Modifiers */
 .content-modifiers {
 	display: flex;
 	align-items: baseline;
@@ -16,6 +17,7 @@
 	margin-left: auto;
 }
 
+/* Threads */
 .thread {
 	border: 2px solid lightgray;
 	padding: 20px;
@@ -45,31 +47,40 @@
 	font-size: 20px;	
 }
 
-/* The Modal (background) */
-.modal {
-  display: block; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+/* Modal */
+.modal-background {
+	display: none;/* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%; 
+	height: 100%;
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+	justify-content: center;
+	align-items: center;
 }
 
-/* Modal Content/Box */
 .modal-content {
-  background-color: white;
-  margin: 20% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 2px solid gray;
-  width: 100%; 
+	width: 100%;
+  	background-color: white;
+  	align-items: center;
+  	padding: 10px;
+}
 
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+#modal-content__header {
+	font-size: 20px;
+	margin-bottom: 10px;
+}
+
+#thread-input-id {
+	margin-bottom: 10px;
+}
+
+#form__categories-id {
+	margin-bottom: 20px;
 }
 
 @media (min-width: 768px) {
@@ -82,6 +93,10 @@
 		margin: auto;
 		width: 70%;
 	}
+
+	.modal-content {
+		width: 60%;
+	}
 }
 
 @media (min-width: 992px) {
@@ -93,5 +108,9 @@
 	.content {
 		margin: auto;
 		width: 60%;
+	}
+
+	.modal-content {
+		width: 50%;
 	}
 }
