--- a/csci201l_beacon_project/WebContent/disaster_thread.css
+++ b/csci201l_beacon_project/WebContent/disaster_thread.css
@@ -4,10 +4,13 @@
 	padding: 5px;
 	display: flex;
 	flex-direction: column;
+	margin: auto;
+	max-width: 650px;
 }
 
-.thread-name {
-	background-color: 
+.content {
+	margin: auto;
+	max-width: 650px;
 }
 
 .filters-and-button {
@@ -15,9 +18,6 @@
 	display: flex;
 	flex-direction: row;
 	align-items: baseline;
-}
-
-#filters-form-id label{
 }
 
 #sort-label-id {
@@ -32,31 +32,38 @@
 .post {
 	border: 2px solid lightgray;
 	padding: 20px;
-	margin: 2px;
+	width: 99%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom:5px;
 	border-radius: 5px;
 	display: flex;
 	flex-direction: column;
 }
 
 .post:hover {
-	background: lightgray;
+	background-color: #9F9F9F21;
 }
 
-.post__username {
+.post-username {
 	font-size: 12px;
 	color: gray;
 }
 
-.post__title {
+.post-title {
 	box-sizing: border-box;
 	width: 100%;
 	font-size: 20px;	
 }
 
-.post__comment {
+.post-comment {
 	margin-top: 10px;
 	font-size: 12px;
 	color: gray;
+}
+
+.post-comment span {
+	cursor: pointer;
 }
 
 /* Modal */
@@ -81,6 +88,7 @@
   	padding: 10px;
   	display: flex;
   	flex-direction: column;
+  	max-width: 600px;
 }
 
 #modal-content__header {
@@ -120,33 +128,9 @@
 
 
 @media (min-width: 768px) {
-	.content-header {
-		margin: auto;
-		width: 70%;
-	}
 
-	.content {
-		margin: auto;
-		width: 70%;
-	}
-
-	.modal-content {
-		width: 60%;
-	}
 }
 
 @media (min-width: 992px) {
-	.content-header {
-		margin: auto;
-		width: 60%;
-	}
 
-	.content {
-		margin: auto;
-		width: 60%;
-	}
-
-	.modal-content {
-		width: 50%;
-	}
 }
