--- a/csci201l_beacon_project/WebContent/post_page.css
+++ b/csci201l_beacon_project/WebContent/post_page.css
@@ -11,7 +11,6 @@
 
 .post-username {
 	font-size: 12px;
-	margin-bottom: 5px;
 }
 
 .post-title {
@@ -20,6 +19,7 @@
 }
 
 .post-info {
+	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
